* fuji: bugfixes
* Added ids:
  - Canon EOS R100, R3, R8, R50
  - Sony Alpha A6100, ZV-E10, A6700
  - Nikon Zf
  - Olympus OM-1Mark3
  - Fuji H2S, X100V1
  - Leica Q3

ports/usb:
* added more Android support (passing in filedescriptor)

ports/serial:
* some fixes, needed for quicktake

all:
* IOLIBS and CAMLIBS now runtime configurable


translations:
* added georgian, friulian, polish, romanian, ukrainian, chinese
------------------------------------------------------------------------------
libgphoto2 2.5.31 release

pentax:
* added Pentax KP id

ptp2:
* do better event queueing during capture (makes capture faster, avoids losing events)
* Canon EOS: OLC logic rewritten to be table driven, more debugging of the content,
  config "testolc" to generate debugoutput. Supports more cameras better.
* Canon EOS: various bugfixes
* Sony Alpha: Added config options: focusarea, liveviewsettingeffect
* Olympus: Enabled OM-1 capture
* Battery Level: also support ENUM style battery reporting for Canon
* Nikon 1: S1 also does not support everything
* Sony Alpha: small changes in config setters
* merged some improvements from NorthOfYou fork for Canon EOS, Nikon and Sony
* New ids:
  - Canon EOS 850D, R7, R10, R5 C, R6m2
  - Fuji X-H2, X-T5
  - GOPRO HERO 11 BLACK, 11 BLACK mini
  - new ids also imported from libmtp
  - Nikon Z30, Z8
  - OMSYSTEM OM-1
  - Pentax KP (PTP mode)
  - Ricoh GR IIIx
  - Sigma fp L
  - Sony A7S III, ILCE-1, ILME-FX3, 7RM5 aka A7-RV,

digigr8:
* fixed init to not switch to webcam mode

pentax:
* Added Pentax KP

general:
* disable log formatting when we are not logging (speeds up large downloads, as
  we are not hex dumping the whole data and immediately discard the result)
* libltdl usage now thread-safe. (some other library pieces are not threadsafe yet)
* some time_t 32bit vs 64bit fixes
* some cleanups and warning fixes

translations:
* updated swedish, spanish
* added georgian, friulian